2020-09-21  Philippe Normand  <pnormand@igalia.com>

        [GStreamer] media/media-can-play-mp3.html fails
        https://bugs.webkit.org/show_bug.cgi?id=216692

        Reviewed by Darin Adler.

        Add mp3 to supported codecs map when a valid decoder has been
        found by the GStreamer registry scanner.

        * platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
        (WebCore::GStreamerRegistryScanner::initialize):

2020-09-20  Sam Weinig  <weinig@apple.com>

        Performance.navigation and Performance.timing are incorrectly exposed to workers
        https://bugs.webkit.org/show_bug.cgi?id=216732

        Reviewed by Simon Fraser.

        * page/Performance.idl:
        Only expose Performance.navigation and Performance.timing to the Window.

2020-09-20  Sam Weinig  <weinig@apple.com>

        Using [Exposed=Window] with [Default] object toJSON() doesn't work
        https://bugs.webkit.org/show_bug.cgi?id=216731

        Reviewed by Simon Fraser.

        Fixes filtering an attribute out of [Default] toJSON operation based
        on which which global objects it is exposed to by ensuring we always
        pass a global object pointer accessor function to 
        GenerateRuntimeEnableConditionalStringForExposed. For good measure,
        we now always pass the global object object pointer to 
        GenerateRuntimeEnableConditionalString as well so that it is always
        explicit.
        
        This is needed to support filtering out Performance.navigation and
        Performance.timing from the Performance interface's toJSON implementation
        which will be addressed in a separate change.
 
        * bindings/scripts/CodeGeneratorJS.pm:
        (GenerateRuntimeEnableConditionalStringForExposed):
        (GenerateRuntimeEnableConditionalString):
        Remove implicit global object accessor string construction by always
        requiring it to be passed.

        * bindings/scripts/test/DOMWindowConstructors.idl: